src/scss/components/_header.scss
.header {
  background-color: $white;
  height: 56px;

  &__list {
    display: flex;
    height: 100%;
  }

  &__item {
    width: calc(100% / 5);

    &:not(:last-child) {
      border-right: 1px solid #f7f7f7;
    }
  }

  &__link {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    width: 100%;
    height: 100%;
    line-height: 1;
    font-weight: 700;
  }

  &__logo {
    position: absolute;
    top: 0;
  }
}

